# faster-geohash

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.toml  fast_geohash.pyi  faster_geohash.pyi  pyproject.toml  rust-toolchain.toml  rustfmt.toml
.github/: actions-hashes.yaml
.github/scripts/: actions-hashes.py
.github/workflows/: pr-checks.yml  publish.yml
LICENSES/: MIT.txt
src/: lib.rs
tests/: __init__.py  test_fast_geohash.py
