[build-system]
requires = [
    # Keep this in sync with dependency-groups.dev below
    "maturin~=1.9",
]
build-backend = "maturin"


[project]
name = "fast-geohash"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"  # Keep the lower bound here in sync with the abi3 feature in the Cargo.toml
authors = [
    {name = "Eashwar Ranganathan", email = "eashwar@eashwar.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dynamic = [
    "version",
]

[tool.maturin]
features = ["wheel"]
locked = true

[dependency-groups]
dev = [
    # Keep this in sync with build-system.requires above
    "maturin~=1.9",
    # See the docs on how to install this into your venv
    "maturin-import-hook~=0.3.0",
    "ruff~=0.14.2",
    "ty==0.0.1a25",
    {include-group = "test"},
]
test = [
    "pytest>=8.4.2",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # Pyflakes
    "I",    # isort
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
]
future-annotations = true

[tool.ruff.lint.per-file-ignores]
# Disable S101 (usage of assert) in tests
"tests/**.py" = ["S101"]

[tool.ruff.lint.isort]
case-sensitive = true
force-single-line = true

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.ty.terminal]
# Error if ty emits any warning-level diagnostics.
error-on-warning = true

[tool.cibuildwheel]
build-frontend = "build[uv]"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

test-groups = ["test"]
test-sources = ["tests"]
test-command = "pytest ./tests"

[tool.cibuildwheel.config-settings]
"maturin.build-args" = "--features=abi3"

[tool.cibuildwheel.linux]
repair-wheel-command = [
  "auditwheel repair -w {dest_dir} {wheel}",
  "pipx run abi3audit --strict --report {wheel}",
]
[tool.cibuildwheel.macos]
repair-wheel-command = [
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
  "pipx run abi3audit --strict --report {wheel}",
]
