[build-system]
requires = [
    # Keep this in sync with dependency-groups.dev below
    "maturin~=1.9",
]
build-backend = "maturin"


[project]
name = "faster-geohash"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"  # Keep the lower bound here in sync with the abi3 feature in the Cargo.toml
authors = [
    {name = "Eashwar Ranganathan", email = "eashwar@eashwar.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 2 - Beta",
    "Programming Language :: Rust",
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dynamic = [
    "description",
    "keywords",
    "readme",
    "version",
]

[project.urls]
homepage = "https://github.com/e-nomem/faster-geohash"
changelog = "https://github.com/e-nomem/faster-geohash/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    # Keep this in sync with build-system.requires above
    "maturin~=1.9",
    # See the docs on how to install this into your venv
    "maturin-import-hook~=0.3.0",
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "ruff~=0.14.2",
    "ty==0.0.1a25",
]
test = [
    "pytest>=8.4.2",
]


[tool.maturin]
features = ["wheel"]
locked = true
exclude = [
    ".github/**/*",
    ".gitignore",
]

[tool.maturin.target.x86_64-apple-darwin]
# 10.12 is the minimum target for the rust compiler
# Note that cibuildwheel has a lower target that is overridden in the publish workflow
# See https://cibuildwheel.pypa.io/en/stable/platforms/#macos-version-compatibility
macos-deployment-target = "10.12"

[tool.maturin.target.aarch64-apple-darwin]
# 11.0 is the minimum target used by cibuildwheel for aarch64 macOS
macos-deployment-target = "11.0"


[tool.cibuildwheel]
build-frontend = "build[uv]"

test-groups = ["test"]
test-sources = ["tests"]
test-command = "pytest ./tests"

[[tool.cibuildwheel.overrides]]
# For all builds, use this opportunity to run twine check to verify the metadata
select = "*"
inherit.repair-wheel-command = "append"
repair-wheel-command = [
    "uv tool run twine check --strict {wheel}",
]

[[tool.cibuildwheel.overrides]]
# Free-threaded python is not currently ABI3 compatible (See PEP 803)
# So we only add these options for non-free-threaded python to build api3
select = "cp39-*"
config-settings."maturin.build-args" = "--features=abi3"
inherit.repair-wheel-command = "append"
repair-wheel-command = [
  "uv tool run abi3audit --strict --report {wheel}",
]


[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # Pyflakes
    "I",    # isort
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
]
future-annotations = true

[tool.ruff.lint.per-file-ignores]
# Disable S101 (usage of assert) in tests
"tests/**.py" = ["S101"]

[tool.ruff.lint.isort]
case-sensitive = true
force-single-line = true

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.ty.terminal]
# Error if ty emits any warning-level diagnostics.
error-on-warning = true
